2003-01-25  Pat Thoyts <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Fix bug #674333: require Tcl version 8.3+
	 (the mime package requires 8.3 therefore so do we.)
	
2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* smtpd.man: More semantic markup, less visual one.

2003-01-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Added exception catching to all channel comms.
	  Added some ESMTP option handling (rudimentary).
	  Added SMTP Transparency handling. (RFC 2821: 4.5.2)
	  Improved error messages for DATA command.

2002-10-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Implemented request #627960 to propagate the network
	  interface name into the server messages. Added a catch around
	  the deliver call and permit the deliver code to return SMTP
	  failure codes via ::errorCode.
	
2002-10-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Implemented feature request #531531. Added
	  -deliverMIME option to provide mail as a MIME token.
	* smtpd.man: Updated for the new delivery option.
	* tk_smtpdMIME: New example using the -deliverMIME option.
	
2002-09-25  David N. Welton  <davidw@dedasys.com>

	* smtpd.man: Fixed documentation error in deliver example.

2002-09-19  David N. Welton  <davidw@dedasys.com>

	* smtpd.tcl (smtpd::service): Added Andreas' suggested changes to
	  avoid a bgerror caused by a broken pipe.

2002-09-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: fixed bug #609835 to cope with multiple addresses in
	  MAIL and RCPT commands without raising exception.

2002-04-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* smtpd.man: Added doctools manpage.

2001-12-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl (smtpd::gmtoffset): Fixed for cases where the hour
	  offset is invalid.

2001-11-19  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* Moved example.tcl to the standard location in