@@ -1,3 +1,7 @@
+2003-04-10  Andreas Kupries  <andreask@activestate.com>
+
+	* smtpd.tcl: Fixed bug #614591.
+
 2003-01-25  Pat Thoyts <patthoyts@users.sourceforge.net>
 
 	* smtpd.tcl: Fix bug #674333: require Tcl version 8.3+
